# ChatApp

./: .gitignore  README.md  clients.txt  clients_1000.txt  pom.xml  run.sh
ex1/: README.md  aggregate1000.csv  aggregate100c.csv  aggregate100i.csv  aggregate100u.csv  aggregate500.csv  aggregate500a.csv  aggregate_100_forking_3instance.csv  docker-compose.yml  loadtest.jmx
ex1/frontend/chat-app/: index.html  package-lock.json  package.json
ex1/frontend/chat-app/app/: layout.tsx  page.tsx
ex1/frontend/chat-app/app/admin/: page.tsx
ex1/frontend/chat-app/components/: Navbar.tsx
ex1/services/chat-app/: Dockerfile  pom.xml
ex1/services/chat-app/src/main/resources/: application.properties  logback-spring.xml
ex1/services/nginx/: nginx.conf
ex1/services/server/: Dockerfile  pom.xml
ex1/services/server/src/main/resources/: application.properties
ex2/: .gitignore  README.md  pyproject.toml  requirements.txt
ex2/src/circle/: main.py  simple_circle_class.py
ex2/tests/: test_simple_circle_class.py
ex3/: .gitignore  README.md  pyproject.toml
ex3/q2/src/: main.py
ex3/q3/: main.py
ex3/q4/: animal.py  dog.py  main.py
ex3/q5/: main.py
ex4/: .gitignore  ex_4.ipynb  tumor_detection.ipynb
services/chat-app/: .gitignore  README.md  clients_1000.txt  clients_81.txt  load_test.sh  pom.xml
services/chat-app/src/main/resources/: application.properties  logback-spring.xml
services/chatapp/: pom.xml
services/chatapp/src/main/resources/: application.properties
src/main/java/com/chatapp/model/: Client.java  (+2 more)
src/main/java/server/: ChatServer.java
(+79 files in other folders)
